# ANDROMEDA

./: LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  utils.py
.github/workflows/: python-package.yml  uvx_ready.yml  version_sync.yml
andromeda/: __init__.py  __main__.py  alignment_tools.py  bam_tools.py  big_text.py  cli.py  config_builder.py  consensus.py  consensus_with_phred.py  extract.py  io_utils.py  logger.py  phred_tools.py  ref_pos_picker.py  umi_group.py
examples/JA-NP-093/mapped_reads/: 250128_JANP-093_LT.AtoG.sorted.bam.bai
examples/JA-NP-093/references/: prok_nanoluc.fa.fai  prok_nanoluc.fa.targetUMIs.csv
tests/: test_alignment_tools.py  test_bam_tools.py  test_cli.py  test_consensus.py  test_extract.py  test_io_utils.py  test_run_all.py
tests/mock_files/: mock_mapped_reads.bam  mock_mapped_reads.bam.bai  mock_ref.fasta
