[project]
name = "andromeda"
version = "0.1.0"
description = "Alignment-based Nucleotide Detection and Read Optimization for Mapping Errors, Deaminations, and Alterations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython~=1.85",
    "loguru~=0.7.3",
    "matplotlib~=3.10.0",
    "pandas~=2.2.3",
    "prompt-toolkit~=3.0.50",
    "pysam~=0.23.0",
    "ruff>=0.9.9",
    "seaborn~=0.13.2",
    "tqdm~=4.67.1",
]
