[project]
name = "andromeda"
version = "0.1.0"
authors = [
    {name = "Marcus J Viscardi", email = "marcus.viscardi@gmail.com"},
    {name = "Liam Tran"},
    {name = "Joshua A Arribere"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
description = "Alignment-based Nucleotide Detection and Read Optimization for Mapping Errors, Deaminations, and Alterations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython~=1.85",
    "loguru~=0.7.3",
    "matplotlib~=3.10.0",
    "pandas~=2.2.3",
    "prompt-toolkit~=3.0.50",
    "pysam~=0.23.0",
    "ruff>=0.9.9",
    "seaborn~=0.13.2",
    "tqdm~=4.67.1",
    "umi-tools~=1.1.6",
    "pytest~=8.3.5",
]
keywords = ["bioinformatics", "alignment", "nucleotide", "mapping", "error", "deamination"]

[project.urls]
"source" = "https://github.com/MViscardi-UCSC/ANDROMEDA"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["andromeda"]


[project.scripts]
andromeda = "andromeda.cli:main"
